# brick-game

./: .gitignore  CHANGELOG.md  README.md  brick-game.cabal
.github/workflows/: haskell.yml
app/: Main.hs
lib/: Animation.hs
lib/Animation/: Env.hs  Render.hs  State.hs  Type.hs
